tests/ui/errors/snapshots/parse_call_missing_parens_nested_type_arg.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing call parens
   ╭─[test.lis:3:11]
 2 │ fn test() {
 3 │   let m = Map.new<string, Slice<int>>
   ·           ─────────────┬─────────────
   ·                        ╰── expected `()` after type arguments
 4 │ }
   ╰────
  help: Add parens to call it: `Map.new<string, Slice<int>>()` · code: [parse.call_missing_parens]
