tests/ui/errors/snapshots/parse_call_missing_parens_single_type_arg.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing call parens
   ╭─[test.lis:3:12]
 2 │ fn test() {
 3 │   let xs = Slice.new<int>
   ·            ───────┬──────
   ·                   ╰── expected `()` after type argument
 4 │ }
   ╰────
  help: Add parens to call it: `Slice.new<int>()` · code: [parse.call_missing_parens]
