tests/ui/errors/snapshots/parse_compound_assignment_invalid_target.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:9]
 2 │ fn main() {
 3 │   { 1 } -= 2;
   ·         ─┬
   ·          ╰── invalid assignment target
 4 │ }
   ╰────
  help: Only variables, fields, and indices can be assigned to · code: [parse.syntax_error]
