tests/ui/errors/snapshots/parse_defer_dot_access_without_call.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid `defer`
   ╭─[test.lis:3:9]
 2 │ fn f() {
 3 │   defer package.cleanup
   ·         ───────┬───────
   ·                ╰── expected `()`
 4 │ }
   ╰────
  help: Add parens to call the function · code: [parse.defer_missing_parens]
