tests/ui/errors/snapshots/parse_detached_doc_comment_before_eof.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unattached doc comment
   ╭─[test.lis:4:1]
 3 │ 
 4 │ /// Returns the current timestamp.
   · ─────────────────┬────────────────
   ·                  ╰── is detached
   ╰────
  help: Place doc comments `///` on the line above a symbol definition and file comments `//!` at the very top of the file · code: [parse.detached_doc_comment]
