tests/ui/errors/snapshots/parse_detached_doc_comment_before_impl.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Unattached doc comment
   ╭─[test.lis:4:1]
 3 │ 
 4 │ /// Methods for working with Foo.
   · ────────────────┬────────────────
   ·                 ╰── is detached
 5 │ impl Foo {
   ╰────
  help: Place the doc comment on the line immediately above a symbol definition · code: [parse.detached_doc_comment]
