tests/ui/errors/snapshots/parse_duplicate_enum_struct_variant_field.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate field
   ╭─[test.lis:2:16]
 1 │ 
 2 │ enum E { Foo { x: int, x: int } }
   ·                ┬       ┬
   ·                │       ╰── defined again
   ·                ╰── first defined
   ╰────
  help: Remove the duplicate field `x` · code: [parse.duplicate_struct_field]
